# fbk-NEUTR-evAL

./: .gitlab-ci.yml  LICENSE  README.md  generate.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: test.yaml
fbk_dev/: merge_mr.py
solutions/: GeNTE.md  LLM-as-a-Judge.md  Neo-GATE.md
src/: data_preprocessing.py  generator.py  metrics.py  model.py  trainer.py  writers.py
src/cli/: generate.py  neogate_evaluation.py  train.py
src/fbk_neutreval/: data_preprocessing.py  generator.py  metrics.py  model.py  trainer.py
src/fbk_neutreval/cli/: generate.py  train.py
src/fbk_neutreval/cli/llm_as_a_judge/: generic.py  gpt.py  huggingface.py  prompt.py
src/fbk_neutreval/resources/prompts/: user_cross  user_mono
src/fbk_neutreval/resources/prompts/de/: cross-l  cross-p_l  mono-l  mono-p_l
src/fbk_neutreval/resources/prompts/el/: cross-p_l
src/fbk_neutreval/resources/prompts/es/: cross-l  cross-p_l  mono-l  mono-p_l
src/fbk_neutreval/resources/prompts/it/: cross-l  cross-p_l  mono-l  mono-p_l
src/fbk_neutreval/resources/schemas/: cross-p_l.json  mono-p_l.json
src/fbk_neutreval/resources/schemas/openai/: cross-l.json  cross-p_l.json  mono-l.json  mono-p_l.json
src/fbk_neutreval/resources/shots/de/: cross-l.tsv  cross-p_l.tsv  mono-l.tsv  mono-p_l.tsv
src/fbk_neutreval/resources/shots/el/: cross-p_l.tsv
src/fbk_neutreval/resources/shots/es/: cross-l.tsv  cross-p_l.tsv  mono-l.tsv  mono-p_l.tsv
src/fbk_neutreval/resources/shots/it/: cross-l.tsv  cross-p_l.tsv  mono-l.tsv  mono-p_l.tsv
tests/: neomorphemes_unit_tests.py  test_data_preprocessing.py  test_generator.py  test_metrics.py  test_model.py  test_trainer.py
